--- a/src/app/allstores/allstores.component.html
+++ b/src/app/allstores/allstores.component.html
@@ -19,7 +19,7 @@
             <div class="navbar-secondhalf">
                 <a routerLink="/cart">Cart</a>
                 <a routerLink="/orders">Orders</a>
-                <a *ngIf="loginState == true" routerLink="/">Logout</a>
+                <a *ngIf="loginState == true" (click)="logout()">Logout</a>
             </div>
         </div>
     </div>
@@ -40,7 +40,7 @@
         <h1>All Stores</h1>
 
         <div class="stores-container">
-            <div class="store-card" routerLink="/store" *ngFor="let store of stores | filter:filter" button (click)="gotoStore(store.store_id)">
+            <div class="store-card" routerLink="/store" *ngFor="let store of stores | filter:filter" button (click)="gotoStore(store.store_id); getStoreName(store.store_name)">
                 <img src="../../assets/images/store.png">
                 <p>{{ store.store_name }}</p>
             </div>
