--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,7 @@
 a {
     text-decoration: none;
     color: black;
+    cursor: pointer;
 }
 
 .main-container {
@@ -22,7 +23,7 @@ a {
 }
 
 .colored-bar {
-    background-color: rgb(34, 139, 34, 0.3);
+    background-color: rgb(0, 128, 0, 0.3);
     width: 100%;
 }
 
@@ -150,6 +151,11 @@ a {
 .store-card img {
     width: 8rem;
     height: 8rem;
+}
+
+.store-card p {
+    padding-bottom: 0;
+    width: 14.375rem;
 }
 
 .title-seeallbtn {
