--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -44,7 +44,7 @@
             <div class="product100" *ngFor="let product of dt |filter:term">
                 <div class="product"> 
                     <img (click)="viewProduct(product.product_id)" style="max-width: 9.37rem; height: 10rem;" src="{{ product.product_image }}">
-                    <p>{{ product.product_name }}</p>
+                    <p>{{ product.product_name }} | ₱ {{ product.product_price }}</p>
                     <div class="action-btn">
                         <img (click)="viewProduct(product.product_id)" class="addcart-btn" src="../../assets/images/witness.png">
                         <img (click)="addToCart(product.product_id)" class="addcart-btn" src="../../assets/images/plus.png">
