--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -109,5 +109,44 @@
         </div>
 
     </div>
+
+    <div class="colored-bar">
+        <div class="footer-container">
+            <footer>
+                <div class="footer-section logotext">
+                    <img src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0" routerLink="/home">
+                    <p>Your convenience starts here.</p>
+                </div>
+                <div class="footer-section">
+                    <p>Social Media</p>
+                    <div class="socmed">
+                        <img class="socmedicon" src="../../assets/images/facebook.png">
+                        <img class="socmedicon" src="../../assets/images/twitter.png">
+                        <img class="socmedicon" src="../../assets/images/instagram.png">
+                    </div>
+                </div>
+                <div class="footer-section">
+                    <p>Contact Us</p>
+                    <div class="icon-text">
+                        <img class="socmedicon" src="../../assets/images/gmail.png">
+                        <p>admin.gocery@gmail.com</p>
+                    </div>
+                    <div class="icon-text">
+                        <img class="socmedicon" src="../../assets/images/telephone.png">
+                        <p>09668732466</p>
+                    </div>
+                </div>
+            </footer>
+            <div class="zontaline">
+                <div class="footext">
+                    <p>Gocery © 2021</p>
+                </div>
+                <div class="footext">
+                    <a href="">Terms & Conditions</a>
+                    <a href="">Privacy Policy</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
