--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -21,6 +21,61 @@ a {
     /* border: 1px solid red; */
 }
 
+.footer-container {
+    max-width: 56.25rem;
+    margin: 0 auto;
+    padding: 1rem;
+}
+
+footer {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
+}
+
+.socmedicon {
+    width: 64px;
+    height: 64px;
+}
+
+.footer-section {
+    flex: 1;
+}
+
+.footer-section p {
+    color: dimgray;
+}
+
+.socmed, .icon-text {
+    display: flex;
+    gap: 1rem;
+}
+
+.logotext {
+    text-align: center;
+}
+
+.logotext p {
+    margin: 0;
+}
+
+.zontaline {
+    border-top: 0.5px solid dimgray;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footext {
+    display: flex;
+    gap: 1rem;
+}
+
+.footext p, a {
+    color: dimgray;
+}
+
 .colored-bar {
     background-color: rgb(34, 139, 34, 0.3);
     width: 100%;
