--- a/src/app/allstores/allstores.component.html
+++ b/src/app/allstores/allstores.component.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <div class="main-container">
+    <div class="main-container animate__animated animate__fadeIn">
 
         <div class="header-text-image-container">
             <div class="header-text">
