--- a/src/app/fullproductinfo/fullproductinfo.component.html
+++ b/src/app/fullproductinfo/fullproductinfo.component.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <div class="main-container" *ngFor="let product of dt">
+    <div class="main-container animate__animated animate__fadeIn" *ngFor="let product of dt">
         <div class="header-text-image-container">
             <div class="header-text">
                 <h1>{{ product.product_name }}</h1>
