--- a/src/app/register/otp/otp.component.html
+++ b/src/app/register/otp/otp.component.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="main-container">
+    <div class="main-container animate__animated animate__fadeIn">
         <div class="otp-form">
             <img src="../../../assets/images/otp.png">
             <p>Enter the One Time Pin code we sent to your email so we can verify it's you.</p>
