--- a/src/app/updatepassword/updatepassword.component.html
+++ b/src/app/updatepassword/updatepassword.component.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <div class="main-container">
+    <div class="main-container animate__animated animate__fadeIn">
         <div class="header-text-image-container">
             <div class="header-text">
                 <h1>Update Password</h1>
@@ -41,13 +41,15 @@
 
         <h1>New Password</h1>
 
-        <div class="input-container">
-            <form [formGroup]="registrationForm" novalidate>
-                <input formControlName="acc_password" [(ngModel)]="acc_password" type="password" placeholder="Password">
-                <input formControlName="acc_confirmpassword" [(ngModel)]="acc_confirmpassword" type="password" placeholder="Confirm Password">
-            </form>
-        </div>
+        <p class="formerror-messages" *ngIf="isSubmitted && errorControl.acc_password.errors?.required">Password is required.</p>
+        <p class="formerror-messages" *ngIf="isSubmitted && errorControl.acc_password.errors?.minlength">Password should be at least 8 characters long or more.</p>
+        <p class="formerror-messages" *ngIf="isSubmitted && errorControl.acc_confirmpassword.errors?.required">Please confirm your password.</p>
+        <p class="formerror-messages" *ngIf="isSubmitted && errorControl.acc_confirmpassword.errors?.minlength">Password should be at least 8 characters long or more.</p>
 
+        <form class="input-container" [formGroup]="registrationForm" novalidate>
+            <input formControlName="acc_password" [(ngModel)]="acc_password" type="password" placeholder="Password">
+            <input formControlName="acc_confirmpassword" [(ngModel)]="acc_confirmpassword" type="password" placeholder="Confirm Password">
+        </form>
 
     </div>
 </body>
