--- a/src/app/updatename/updatename.component.css
+++ b/src/app/updatename/updatename.component.css
@@ -110,6 +110,13 @@ input:focus {
     outline: none !important;
 }
 
+.formerror-messages {
+    border: 1px solid crimson;
+    background-color: rgb(220,20,60, 0.2);
+    border-radius: 10px;
+    padding: 1rem;
+}
+
 @media (max-width: 46.875rem) { 
     .navbar, .header-text-image-container {
         display: flex;
